--- a/Veggie/scss/app.scss
+++ b/Veggie/scss/app.scss
@@ -1,9 +1,25 @@
 @import "settings";
 @import "foundation";
-
+body,html,section{height:100%;width:100%}
 #map-canvas {
+	border-left:200px solid rgb(51,51,51);
 	height: 100%;
 	margin: 0px;
 	padding: 0px;
-	height:500px;
+	height:100%;
+}
+.content{
+	position:absolute;
+	top:0px;
+	left:0px;
+	width:200px;
+	z-index:999;
+	box-shadow: 2px 0px 7px 3px #888;
+	height:100%;
+	text-align:center;
+
+	h1{
+	color: #FFF;
+	text-shadow: 0px 3px 2px #000;
+	}
 }
