--- a/Veggie/scss/app.scss
+++ b/Veggie/scss/app.scss
@@ -2,7 +2,6 @@
 @import "foundation";
 body,html,section{height:100%;width:100%}
 #map-canvas {
-	border-left:200px solid rgb(51,51,51);
 	height: 100%;
 	margin: 0px;
 	padding: 0px;
@@ -10,16 +9,31 @@ body,html,section{height:100%;width:100%}
 }
 .content{
 	position:absolute;
-	top:0px;
+	bottom:0px;
 	left:0px;
-	width:200px;
+	width:100%;
 	z-index:999;
-	box-shadow: 2px 0px 7px 3px #888;
-	height:100%;
+	height:75px;
 	text-align:center;
+	background: rgba(0, 0, 0, 0.7);
 
-	h1{
-	color: #FFF;
-	text-shadow: 0px 3px 2px #000;
+	form{
+	width:300px;
+	margin:0 auto;
+
+		input{
+			width:178px;
+			float:left;
+			height: 51px;
+		}
 	}
+}
+.main_text{
+	position:absolute;
+	width:100%;
+	text-align:center;
+	top: 30%;
+}
+img[src*="gstatic.com/"], img[src*="googleapis.com/"] {
+max-width: none;
 }
