--- a/Veggie/scss/app.scss
+++ b/Veggie/scss/app.scss
@@ -1,6 +1,26 @@
 @import "settings";
 @import "foundation";
-body,html,section{height:100%;width:100%}
+body,html,section{
+	height:100%;
+	width:100%;
+/* IE10 Consumer Preview */ 
+background-image: -ms-radial-gradient(center, circle farthest-corner, #FFFFFF 0%, #CACCCA 100%);
+
+/* Mozilla Firefox */ 
+background-image: -moz-radial-gradient(center, circle farthest-corner, #FFFFFF 0%, #CACCCA 100%);
+
+/* Opera */ 
+background-image: -o-radial-gradient(center, circle farthest-corner, #FFFFFF 0%, #CACCCA 100%);
+
+/* Webkit (Safari/Chrome 10) */ 
+background-image: -webkit-gradient(radial, center center, 0, center center, 497, color-stop(0, #FFFFFF), color-stop(1, #CACCCA));
+
+/* Webkit (Chrome 11+) */ 
+background-image: -webkit-radial-gradient(center, circle farthest-corner, #FFFFFF 0%, #CACCCA 100%);
+
+/* W3C Markup, IE10 Release Preview */ 
+background-image: radial-gradient(circle farthest-corner at center, #FFFFFF 0%, #CACCCA 100%);
+}
 #map-canvas {
 	height: 100%;
 	margin: 0px;
