--- a/css/component2.css
+++ b/css/component2.css
@@ -142,7 +142,6 @@ font-family: 'Lato', Calibri, Arial, sans-serif;
 
 .intro-content h1 > span {
 	display: block;
-	white-space: nowrap;
 }
 
 .intro-content h1 > span:first-child {
@@ -472,53 +471,81 @@ font-family: 'Lato', Calibri, Arial, sans-serif;
 	body { font-size: 70%; }
 }
 
-		.hide{display: none;}
-      #map {
-        height: 500px;
-        margin: 0px;
-        padding: 0px
-      }
-      .controls {
-        margin-top: 16px;
-        border: 1px solid transparent;
-        border-radius: 2px 0 0 2px;
-        box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        height: 50px;
-        outline: none;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-      }
+.hide{display: none;}
+#map {
+height: 500px;
+margin: 0px;
+padding: 0px
+}
+.controls {
+margin-top: 16px;
+border: 1px solid transparent;
+border-radius: 2px 0 0 2px;
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+height: 50px;
+outline: none;
+box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
 
-      #pac-input {
-        background-color: #fff;
-        padding: 0 11px 0 13px;
-        width: 400px;
-        font-family: Roboto;
-        font-size: 20px;
-        font-weight: 300;
-        text-overflow: ellipsis;
-        top: 20px!important;
-      }
+#pac-input {
+background-color: #fff;
+padding: 0 11px 0 13px;
+width: 400px;
+font-family: Roboto;
+font-size: 20px;
+font-weight: 300;
+text-overflow: ellipsis;
+top: 20px!important;
+}
 
-      #pac-input:focus {
-        border-color: #4d90fe;
-        margin-left: -1px;
-        padding-left: 14px;  /* Regular padding-left + 1. */
-        width: 401px;
-      }
+#pac-input:focus {
+border-color: #4d90fe;
+margin-left: -1px;
+padding-left: 14px;  /* Regular padding-left + 1. */
+width: 401px;
+}
 
-      .pac-container {
-        font-family: Roboto;
-      }
+.pac-container {
+font-family: Roboto;
+}
 
-      #type-selector {
-        color: #fff;
-        background-color: #4d90fe;
-        padding: 5px 11px 0px 11px;
-      }
+#type-selector {
+color: #fff;
+background-color: #4d90fe;
+padding: 5px 11px 0px 11px;
+}
 
-      #type-selector label {
-        font-family: Roboto;
-        font-size: 13px;
-        font-weight: 300;
-      }
+#type-selector label {
+font-family: Roboto;
+font-size: 13px;
+font-weight: 300;
+}
+
+#review_box{
+	position:fixed;
+	width:500px;
+	height: 400px;
+	overflow-x: auto; 
+	top:20%;
+	left:10%;
+	background: #47A3DA;
+	border-radius: 10px;
+	border: 10px solid rgba(0, 0, 0, 0.2);
+	display: none;
+}
+#load{
+	position:absolute;width:100%;height:100%;background-color: rgba(0, 0, 0, 0.5);:orange;z-index:9999;display: table;
+}
+#load > center{
+	display: table-cell;
+	vertical-align: middle;
+}
+#load > center > img{
+	-webkit-animation:spin 2s linear infinite;
+    -moz-animation:spin 2s linear infinite;
+    animation:spin 2s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
